# ethminer

./: .travis.yml
Docker/: 00-run.zsh  Build.sh  Dockerfile
ethminer/: CMakeLists.txt
libapicore/: ApiServer.cpp
libethash-cl/: CMakeLists.txt
libhwmon/: CMakeLists.txt
libpoolprotocols/stratum/: EthStratumClient.cpp
scripts/: check_code_format.py
